[project]
name = "dc-dc-sym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pyside6>=6.9.0",
    # "pyspice>=1.5",
    "PySpice @ git+https://github.com/PySpice-org/PySpice.git@devel",
    "scipy>=1.15.3",
]
